--- a/app_engine_data/app.yaml
+++ b/app_engine_data/app.yaml
@@ -14,6 +14,9 @@ handlers:
 - url: /get
   script: getip.py 
 
+- url: /redirect
+  script: redirecttoserver.py 
+
 - url: /.*
   script: notfound.py
 
